Applications/InfluxDB/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
      name: influxdb
  type: ClusterIP
