Applications/InfluxDB/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: CHANGE_ME
      kind: Rule
      middlewares:
        - name: default-chain
          namespace: traefik-system
      services:
        - name: influxdb
          port: 8086
  tls:
    secretName: influxdb-certificate
